# nbs_extract_autodeal

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml
app/: etl.py  funcao.py
app/data/models/: os_capa_model.py
app/data/schemas/: schema_os_capa.py
app/data/sql/: os_canceladas.sql  os_capa.sql  os_capa_fechamento.sql  os_capa_sql.py  os_cliente_fechamento.sql  os_itens.sql  os_itens_fechamento.sql  os_nota_fiscal.sql  os_nota_fiscal_fechamento.sql  os_reclamacao.sql  os_reclamacao_fechamento.sql  os_relacionadas.sql  os_relacionadas_fechamento.sql  os_servicos.sql  os_servicos_fechamento.sql
app/data/sql/customer service orders/: os_cliente.sql
app/data/sql/service_orders/: __init__.py  sql_canceled_service_orders.py  sql_closed_service_orders.py  sql_open_service_orders.py
app/infra/: load_settings.py  oracle_database.py  postgres_database.py
app/main/controller/: os_capa_controller.py  service_orders_controller.py
app/main/usecases/destination/: load_max_date_column.py  upsert_data.py
app/main/usecases/source/: extract_data.py
app/main/usecases/transformation/: format_column.py
app/utils/: infer_schemas.py
docs/: index.md
tests/: test_funcao_ola_turma.py
tests/infra/: test_load_settings.py
